--- a/movie.html
+++ b/movie.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="top-container">
-            <div><a href="movie.html"><img class="logo" src="image/logo movie.jpg"></a></div>
+            <div><a href="movie.html"><img class="logo" src="logo movie.jpg"></a></div>
                 <div class="search-bar">
                  <form action="/search" method="get">
                     <input type="text" name="query" placeholder="Search you mf......">
@@ -28,11 +28,11 @@
                 <section class="slider-container">
                     <div class="slider-wrapper">
                         <div class="slider">
-                            <img id="slider1" src="image/game-of-thrones-house-of-the-dragon_Nero AI_Standard.webp" alt="">
-                            <img id="slider2" src="image/avengerss endgame_Nero AI_Standard.webp" alt="">
-                            <img id="slider3" src="image/nun 2_Nero AI_Standard.jpeg" alt="">
-                            <img id="slider4" src="image/batman dark knight_Nero AI_Standard.jpeg" alt="">
-                            <img id="slider5" src="image/rings of power_Nero AI_Standard.jpeg" alt="">
+                            <img id="slider1" src="game-of-thrones-house-of-the-dragon_Nero AI_Standard.webp" alt="">
+                            <img id="slider2" src="avengerss endgame_Nero AI_Standard.webp" alt="">
+                            <img id="slider3" src="nun 2_Nero AI_Standard.jpeg" alt="">
+                            <img id="slider4" src="batman dark knight_Nero AI_Standard.jpeg" alt="">
+                            <img id="slider5" src="rings of power_Nero AI_Standard.jpeg" alt="">
                         </div>
                         <div class="slider-nav">
                             <a href="#slider1"></a>
@@ -47,23 +47,23 @@
                     <div><h1 class="trending">Trending</h1></div>
                     <div class="tren">
                     <div class="pop">
-                        <div ><img class="pop-img" src="image/deadpool-wolverine-hugh-jackman-1.avif"></div>
+                        <div ><img class="pop-img" src="deadpool-wolverine-hugh-jackman-1.avif"></div>
                         <div><p class="pop-name">Deadpool & Wolverine</p></div>
                     </div>
                     <div class="pop">
-                        <div ><img class="pop-img" src="image/kraven_Nero AI_Standard.jpeg"></div>
+                        <div ><img class="pop-img" src="kraven_Nero AI_Standard.jpeg"></div>
                         <div><p class="pop-name">Kraven the Hunter </p></div>
                     </div>
                     <div class="pop">
-                        <div ><img class="pop-img" src="image/boys_Nero AI_Standard.jpeg    "></div>
+                        <div ><img class="pop-img" src="boys_Nero AI_Standard.jpeg    "></div>
                         <div><p class="pop-name">The Boys<br>season 4</p></div>
                     </div>
                     <div class="pop">
-                        <div ><img class="pop-img" src="image/kingdom-of-the-planet-of-the-apes-review-1715317874.avif "></div>
+                        <div ><img class="pop-img" src="kingdom-of-the-planet-of-the-apes-review-1715317874.avif "></div>
                         <div><p class="pop-name">Kingdom of the Planet of the Apes</p></div>
                     </div>
                     <div class="pop">
-                        <div ><img class="pop-img" src="image/dune.jpg"></div>
+                        <div ><img class="pop-img" src="dune.jpg"></div>
                         <div><p class="pop-name">Dune: Part Two</p></div>
                     </div>
                     </div>
